# react-native-mavlink

./: ARCHITECTURE_REFACTOR.md  CHANGELOG.md  IMPLEMENTATION.md  NitroMavlink.podspec  QUICKSTART.md  README.md  TODO.md  UDP_TCP_OPTIONS_EXPLAINED.md  UPDATE_v0.0.2.md  nitro.json  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/mavlink/: NitroMavlinkPackage.kt
cpp/: CMakeLists.txt  HybirdMAVLink.cpp  HybirdMAVLink.hpp  HybridMAVLink.cpp  HybridMAVLink.hpp  MAVLink.hpp
cpp/MAVLink/: CMakeLists.txt  ImageProtocolManager.cc  ImageProtocolManager.h  MAVLinkFTP.cc  MAVLinkFTP.h  MAVLinkLib.h  MAVLinkSigning.cc  MAVLinkSigning.h  MAVLinkStreamConfig.cc  MAVLinkStreamConfig.h  QGCMAVLink.cc  QGCMAVLink.h  StatusTextHandler.cc  StatusTextHandler.h  SysStatusSensorInfo.cc  SysStatusSensorInfo.h
cpp/MAVLink/LibEvents/: EventHandler.cc  EventHandler.h  HealthAndArmingCheckReport.cc  HealthAndArmingCheckReport.h  libevents_includes.h  logging.cpp
cpp/bridge/: README.md
cpp/bridge/commands/: Commands.cpp
cpp/bridge/events/: Events.cpp
cpp/bridge/logging/: Logging.cpp
cpp/bridge/mission/: Mission.cpp
cpp/bridge/parameters/: Parameters.cpp
cpp/bridge/transport/: Transport.cpp
cpp/commands/: CommandExecutor.cpp  CommandExecutor.hpp
cpp/connection/: ConnectionManager.cpp  ConnectionManager.hpp
cpp/core/: MAVLinkCore.cpp  MAVLinkCore.hpp  MAVLinkState.hpp
cpp/events/: EventEmitter.cpp  EventEmitter.hpp
cpp/mavlink/v2.0/: mavlink_helpers.h
cpp/mavlink/v2.0/common/: common.h  common.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_airspeed.hpp  mavlink_msg_ais_vessel.hpp  mavlink_msg_camera_image_captured.hpp  mavlink_msg_camera_information.hpp  mavlink_msg_change_operator_control.hpp  mavlink_msg_esc_info.hpp  mavlink_msg_esc_status.hpp  mavlink_msg_figure_eight_execution_status.hpp  mavlink_msg_gimbal_device_information.hpp  mavlink_msg_manual_control.hpp  mavlink_msg_mission_item.hpp  mavlink_msg_onboard_computer_status.hpp  mavlink_msg_param_error.hpp  mavlink_msg_set_home_position.hpp  mavlink_msg_statustext.hpp  mavlink_msg_system_time.hpp  mavlink_msg_timesync.hpp  version.h
cpp/mavlink/v2.0/minimal/: mavlink.h  minimal.h  minimal.hpp  version.h
cpp/mavlink/v2.0/standard/: gtestsuite.hpp  mavlink.h  mavlink_msg_autopilot_version.hpp  mavlink_msg_global_position_int.hpp  standard.h  standard.hpp  version.h
cpp/mission/: HybirdMAVLink.Mission.cpp
cpp/parameters/: ParameterManager.cpp  ParameterManager.hpp
cpp/params/: HybirdMAVLink.Params.cpp
cpp/parser/: MessageParser.cpp  MessageParser.hpp
cpp/telemetry/: HybirdMAVLink.Telemetry.cpp  TelemetryManager.cpp  TelemetryManager.hpp
cpp/transport/: TCPTransport.cpp  TCPTransport.hpp  Transport.hpp  UDPTransport.cpp  UDPTransport.hpp
cpp/vehicle/: VehicleState.cpp  VehicleState.hpp
cpp/watchdog/: HybirdMAVLink.Watchdog.cpp
example/: App.tsx
ios/: Bridge.h
src/: index.ts
src/specs/: MAVLink.nitro.ts
